# tabularis-elasticsearch-plugin

./: .editorconfig  .gitignore  .tabularium  CLAUDE.md  CODEOWNERS  Cargo.toml  README.md  justfile  manifest.json
.github/workflows/: release.yml
src/: client.rs  error.rs  main.rs  rpc.rs
src/es/: client.rs  mod.rs  models.rs  pool.rs
src/handlers/: metadata.rs  mod.rs  models.rs  query.rs
src/utils/: extractor.rs  mod.rs
testdata/: posts-index-mapping.json  posts.ndjson
ui/: package.json  pnpm-lock.yaml
ui/src/: index.tsx  styles.ts
