[package]
name = "elasticsearch-plugin"
version = "0.1.1"
edition = "2021"
description = "Tabularis driver plugin for Elasticsearch"
license = "Apache-2.0"
publish = false

[dependencies]
elasticsearch = "9.1.0-alpha.1"
serde = "1"
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
url = "2.5.8"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
